src/ParGrammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.0 from ParGrammar.y
-----------------------------------------------------------------------------

state 68 contains 1 reduce/reduce conflicts.
state 151 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> Type Ident '(' ListArg ')' Block         (5)
	TopDef -> ClassHeader                              (6)
	ListTopDef -> TopDef                               (7)
	ListTopDef -> TopDef ListTopDef                    (8)
	Arg -> Type Ident                                  (9)
	ListArg ->                                         (10)
	ListArg -> Arg                                     (11)
	ListArg -> Arg ',' ListArg                         (12)
	LValue -> Ident                                    (13)
	LValue -> Ident '[' Expr ']'                       (14)
	LValue -> Ident '.' Ident                          (15)
	Block -> '{' ListStmt '}'                          (16)
	ListStmt ->                                        (17)
	ListStmt -> ListStmt Stmt                          (18)
	Stmt -> ';'                                        (19)
	Stmt -> Block                                      (20)
	Stmt -> Type ListItem ';'                          (21)
	Stmt -> LValue '=' Expr ';'                        (22)
	Stmt -> LValue '++' ';'                            (23)
	Stmt -> LValue '--' ';'                            (24)
	Stmt -> 'return' Expr ';'                          (25)
	Stmt -> 'return' ';'                               (26)
	Stmt -> 'if' '(' Expr ')' Stmt                     (27)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (28)
	Stmt -> 'while' '(' Expr ')' Stmt                  (29)
	Stmt -> 'for' '(' Type Ident ':' Ident ')' Stmt    (30)
	Stmt -> Expr ';'                                   (31)
	Item -> Ident                                      (32)
	Item -> Ident '=' Expr                             (33)
	ListItem -> Item                                   (34)
	ListItem -> Item ',' ListItem                      (35)
	Type -> Ident                                      (36)
	Type -> 'int'                                      (37)
	Type -> 'string'                                   (38)
	Type -> 'boolean'                                  (39)
	Type -> 'void'                                     (40)
	Type -> Type '[]'                                  (41)
	ClassHeader -> 'class' Ident ClassBlock            (42)
	ClassHeader -> 'class' Ident 'extends' Ident ClassBlock   (43)
	ClassBlock -> '{' ListClassStmt '}'                (44)
	ListClassStmt ->                                   (45)
	ListClassStmt -> ListClassStmt ClassStmt           (46)
	ClassStmt -> Type ListItem ';'                     (47)
	ClassStmt -> Type Ident '(' ListArg ')' Block ';'   (48)
	Expr6 -> LValue                                    (49)
	Expr6 -> 'new' Type '[' Expr ']'                   (50)
	Expr6 -> '(' Type ')' 'null'                       (51)
	Expr6 -> Integer                                   (52)
	Expr6 -> 'true'                                    (53)
	Expr6 -> 'false'                                   (54)
	Expr6 -> Ident '.' Ident '(' ListExpr ')'          (55)
	Expr6 -> String                                    (56)
	Expr6 -> Expr7                                     (57)
	Expr7 -> Ident '(' ListExpr ')'                    (58)
	Expr7 -> '(' Expr ')'                              (59)
	Expr5 -> '-' Expr6                                 (60)
	Expr5 -> '!' Expr6                                 (61)
	Expr5 -> Expr6                                     (62)
	Expr4 -> Expr4 MulOp Expr5                         (63)
	Expr4 -> Expr5                                     (64)
	Expr3 -> Expr3 AddOp Expr4                         (65)
	Expr3 -> Expr4                                     (66)
	Expr2 -> Expr2 RelOp Expr3                         (67)
	Expr2 -> Expr3                                     (68)
	Expr1 -> Expr2 '&&' Expr1                          (69)
	Expr1 -> Expr2                                     (70)
	Expr -> Expr1 '||' Expr                            (71)
	Expr -> Expr1                                      (72)
	ListExpr ->                                        (73)
	ListExpr -> Expr                                   (74)
	ListExpr -> Expr ',' ListExpr                      (75)
	AddOp -> '+'                                       (76)
	AddOp -> '-'                                       (77)
	MulOp -> '*'                                       (78)
	MulOp -> '/'                                       (79)
	MulOp -> '%'                                       (80)
	RelOp -> '<'                                       (81)
	RelOp -> '<='                                      (82)
	RelOp -> '>'                                       (83)
	RelOp -> '>='                                      (84)
	RelOp -> '=='                                      (85)
	RelOp -> '!='                                      (86)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'.'            { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	':'            { PT _ (TS _ 15) }
	';'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'>'            { PT _ (TS _ 21) }
	'>='           { PT _ (TS _ 22) }
	'['            { PT _ (TS _ 23) }
	'[]'           { PT _ (TS _ 24) }
	']'            { PT _ (TS _ 25) }
	'boolean'      { PT _ (TS _ 26) }
	'class'        { PT _ (TS _ 27) }
	'else'         { PT _ (TS _ 28) }
	'extends'      { PT _ (TS _ 29) }
	'false'        { PT _ (TS _ 30) }
	'for'          { PT _ (TS _ 31) }
	'if'           { PT _ (TS _ 32) }
	'int'          { PT _ (TS _ 33) }
	'new'          { PT _ (TS _ 34) }
	'null'         { PT _ (TS _ 35) }
	'return'       { PT _ (TS _ 36) }
	'string'       { PT _ (TS _ 37) }
	'true'         { PT _ (TS _ 38) }
	'void'         { PT _ (TS _ 39) }
	'while'        { PT _ (TS _ 40) }
	'{'            { PT _ (TS _ 41) }
	'||'           { PT _ (TS _ 42) }
	'}'            { PT _ (TS _ 43) }
	L_ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rules 5, 6
	ListTopDef      rules 7, 8
	Arg             rule  9
	ListArg         rules 10, 11, 12
	LValue          rules 13, 14, 15
	Block           rule  16
	ListStmt        rules 17, 18
	Stmt            rules 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31
	Item            rules 32, 33
	ListItem        rules 34, 35
	Type            rules 36, 37, 38, 39, 40, 41
	ClassHeader     rules 42, 43
	ClassBlock      rule  44
	ListClassStmt   rules 45, 46
	ClassStmt       rules 47, 48
	Expr6           rules 49, 50, 51, 52, 53, 54, 55, 56, 57
	Expr7           rules 58, 59
	Expr5           rules 60, 61, 62
	Expr4           rules 63, 64
	Expr3           rules 65, 66
	Expr2           rules 67, 68
	Expr1           rules 69, 70
	Expr            rules 71, 72
	ListExpr        rules 73, 74, 75
	AddOp           rules 76, 77
	MulOp           rules 78, 79, 80
	RelOp           rules 81, 82, 83, 84, 85, 86

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'boolean'      shift, and enter state 9
	'class'        shift, and enter state 10
	'int'          shift, and enter state 11
	'string'       shift, and enter state 12
	'void'         shift, and enter state 13
	L_ident        shift, and enter state 2

	Ident          goto state 3
	Program        goto state 4
	TopDef         goto state 5
	ListTopDef     goto state 6
	Type           goto state 7
	ClassHeader    goto state 8

State 1


	L_ident        shift, and enter state 2


State 2

	Ident -> L_ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'.'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	'[]'           reduce using rule 1
	']'            reduce using rule 1
	'extends'      reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1
	L_ident        reduce using rule 1


State 3

	Type -> Ident .                                     (rule 36)

	'['            reduce using rule 36
	'[]'           reduce using rule 36
	L_ident        reduce using rule 36


State 4

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 5

	ListTopDef -> TopDef .                              (rule 7)
	ListTopDef -> TopDef . ListTopDef                   (rule 8)

	'boolean'      shift, and enter state 9
	'class'        shift, and enter state 10
	'int'          shift, and enter state 11
	'string'       shift, and enter state 12
	'void'         shift, and enter state 13
	L_ident        shift, and enter state 2
	%eof           reduce using rule 7

	Ident          goto state 3
	TopDef         goto state 5
	ListTopDef     goto state 17
	Type           goto state 7
	ClassHeader    goto state 8

State 6

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 7

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 5)
	Type -> Type . '[]'                                 (rule 41)

	'[]'           shift, and enter state 16
	L_ident        shift, and enter state 2

	Ident          goto state 15

State 8

	TopDef -> ClassHeader .                             (rule 6)

	'boolean'      reduce using rule 6
	'class'        reduce using rule 6
	'int'          reduce using rule 6
	'string'       reduce using rule 6
	'void'         reduce using rule 6
	L_ident        reduce using rule 6
	%eof           reduce using rule 6


State 9

	Type -> 'boolean' .                                 (rule 39)

	')'            reduce using rule 39
	'['            reduce using rule 39
	'[]'           reduce using rule 39
	L_ident        reduce using rule 39


State 10

	ClassHeader -> 'class' . Ident ClassBlock           (rule 42)
	ClassHeader -> 'class' . Ident 'extends' Ident ClassBlock    (rule 43)

	L_ident        shift, and enter state 2

	Ident          goto state 14

State 11

	Type -> 'int' .                                     (rule 37)

	')'            reduce using rule 37
	'['            reduce using rule 37
	'[]'           reduce using rule 37
	L_ident        reduce using rule 37


State 12

	Type -> 'string' .                                  (rule 38)

	')'            reduce using rule 38
	'['            reduce using rule 38
	'[]'           reduce using rule 38
	L_ident        reduce using rule 38


State 13

	Type -> 'void' .                                    (rule 40)

	')'            reduce using rule 40
	'['            reduce using rule 40
	'[]'           reduce using rule 40
	L_ident        reduce using rule 40


State 14

	ClassHeader -> 'class' Ident . ClassBlock           (rule 42)
	ClassHeader -> 'class' Ident . 'extends' Ident ClassBlock    (rule 43)

	'extends'      shift, and enter state 20
	'{'            shift, and enter state 21

	ClassBlock     goto state 19

State 15

	TopDef -> Type Ident . '(' ListArg ')' Block        (rule 5)

	'('            shift, and enter state 18


State 16

	Type -> Type '[]' .                                 (rule 41)

	')'            reduce using rule 41
	'['            reduce using rule 41
	'[]'           reduce using rule 41
	L_ident        reduce using rule 41


State 17

	ListTopDef -> TopDef ListTopDef .                   (rule 8)

	%eof           reduce using rule 8


State 18

	TopDef -> Type Ident '(' . ListArg ')' Block        (rule 5)

	')'            reduce using rule 10
	'boolean'      shift, and enter state 9
	'int'          shift, and enter state 11
	'string'       shift, and enter state 12
	'void'         shift, and enter state 13
	L_ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 24
	ListArg        goto state 25
	Type           goto state 26

State 19

	ClassHeader -> 'class' Ident ClassBlock .           (rule 42)

	'boolean'      reduce using rule 42
	'class'        reduce using rule 42
	'int'          reduce using rule 42
	'string'       reduce using rule 42
	'void'         reduce using rule 42
	L_ident        reduce using rule 42
	%eof           reduce using rule 42


State 20

	ClassHeader -> 'class' Ident 'extends' . Ident ClassBlock    (rule 43)

	L_ident        shift, and enter state 2

	Ident          goto state 23

State 21

	ClassBlock -> '{' . ListClassStmt '}'               (rule 44)

	'boolean'      reduce using rule 45
	'int'          reduce using rule 45
	'string'       reduce using rule 45
	'void'         reduce using rule 45
	'}'            reduce using rule 45
	L_ident        reduce using rule 45

	ListClassStmt  goto state 22

State 22

	ClassBlock -> '{' ListClassStmt . '}'               (rule 44)
	ListClassStmt -> ListClassStmt . ClassStmt          (rule 46)

	'boolean'      shift, and enter state 9
	'int'          shift, and enter state 11
	'string'       shift, and enter state 12
	'void'         shift, and enter state 13
	'}'            shift, and enter state 33
	L_ident        shift, and enter state 2

	Ident          goto state 3
	Type           goto state 31
	ClassStmt      goto state 32

State 23

	ClassHeader -> 'class' Ident 'extends' Ident . ClassBlock    (rule 43)

	'{'            shift, and enter state 21

	ClassBlock     goto state 30

State 24

	ListArg -> Arg .                                    (rule 11)
	ListArg -> Arg . ',' ListArg                        (rule 12)

	')'            reduce using rule 11
	','            shift, and enter state 29


State 25

	TopDef -> Type Ident '(' ListArg . ')' Block        (rule 5)

	')'            shift, and enter state 28


State 26

	Arg -> Type . Ident                                 (rule 9)
	Type -> Type . '[]'                                 (rule 41)

	'[]'           shift, and enter state 16
	L_ident        shift, and enter state 2

	Ident          goto state 27

State 27

	Arg -> Type Ident .                                 (rule 9)

	')'            reduce using rule 9
	','            reduce using rule 9


State 28

	TopDef -> Type Ident '(' ListArg ')' . Block        (rule 5)

	'{'            shift, and enter state 39

	Block          goto state 38

State 29

	ListArg -> Arg ',' . ListArg                        (rule 12)

	')'            reduce using rule 10
	'boolean'      shift, and enter state 9
	'int'          shift, and enter state 11
	'string'       shift, and enter state 12
	'void'         shift, and enter state 13
	L_ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 24
	ListArg        goto state 37
	Type           goto state 26

State 30

	ClassHeader -> 'class' Ident 'extends' Ident ClassBlock .    (rule 43)

	'boolean'      reduce using rule 43
	'class'        reduce using rule 43
	'int'          reduce using rule 43
	'string'       reduce using rule 43
	'void'         reduce using rule 43
	L_ident        reduce using rule 43
	%eof           reduce using rule 43


State 31

	Type -> Type . '[]'                                 (rule 41)
	ClassStmt -> Type . ListItem ';'                    (rule 47)
	ClassStmt -> Type . Ident '(' ListArg ')' Block ';'    (rule 48)

	'[]'           shift, and enter state 16
	L_ident        shift, and enter state 2

	Ident          goto state 34
	Item           goto state 35
	ListItem       goto state 36

State 32

	ListClassStmt -> ListClassStmt ClassStmt .          (rule 46)

	'boolean'      reduce using rule 46
	'int'          reduce using rule 46
	'string'       reduce using rule 46
	'void'         reduce using rule 46
	'}'            reduce using rule 46
	L_ident        reduce using rule 46


State 33

	ClassBlock -> '{' ListClassStmt '}' .               (rule 44)

	'boolean'      reduce using rule 44
	'class'        reduce using rule 44
	'int'          reduce using rule 44
	'string'       reduce using rule 44
	'void'         reduce using rule 44
	L_ident        reduce using rule 44
	%eof           reduce using rule 44


State 34

	Item -> Ident .                                     (rule 32)
	Item -> Ident . '=' Expr                            (rule 33)
	ClassStmt -> Type Ident . '(' ListArg ')' Block ';'    (rule 48)

	'('            shift, and enter state 43
	','            reduce using rule 32
	';'            reduce using rule 32
	'='            shift, and enter state 44


State 35

	ListItem -> Item .                                  (rule 34)
	ListItem -> Item . ',' ListItem                     (rule 35)

	','            shift, and enter state 42
	';'            reduce using rule 34


State 36

	ClassStmt -> Type ListItem . ';'                    (rule 47)

	';'            shift, and enter state 41


State 37

	ListArg -> Arg ',' ListArg .                        (rule 12)

	')'            reduce using rule 12


State 38

	TopDef -> Type Ident '(' ListArg ')' Block .        (rule 5)

	'boolean'      reduce using rule 5
	'class'        reduce using rule 5
	'int'          reduce using rule 5
	'string'       reduce using rule 5
	'void'         reduce using rule 5
	L_ident        reduce using rule 5
	%eof           reduce using rule 5


State 39

	Block -> '{' . ListStmt '}'                         (rule 16)

	'!'            reduce using rule 17
	'('            reduce using rule 17
	'-'            reduce using rule 17
	';'            reduce using rule 17
	'boolean'      reduce using rule 17
	'false'        reduce using rule 17
	'for'          reduce using rule 17
	'if'           reduce using rule 17
	'int'          reduce using rule 17
	'new'          reduce using rule 17
	'return'       reduce using rule 17
	'string'       reduce using rule 17
	'true'         reduce using rule 17
	'void'         reduce using rule 17
	'while'        reduce using rule 17
	'{'            reduce using rule 17
	'}'            reduce using rule 17
	L_ident        reduce using rule 17
	L_integ        reduce using rule 17
	L_quoted       reduce using rule 17

	ListStmt       goto state 40

State 40

	Block -> '{' ListStmt . '}'                         (rule 16)
	ListStmt -> ListStmt . Stmt                         (rule 18)
